reef: Enable CR50 TPM 2.0
Enable TPM 2.0 functionality for OS utilities, and set the
cr50_onboard USE flag for the updater.

Leave the mocktpm USE flag set for now until the next build has
been updated to cr50 with tpm enabled.

BUG=chrome-os-partner:53336
TEST=build and boot on reef

Signed-off-by: Duncan Laurie <dlaurie@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/385016
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

Change-Id: I8722fdc11412891f3ee98661116ced3b5a182f13
Reviewed-on: https://chromium-review.googlesource.com/413786
Reviewed-by: Ting Shen <phoenixshen@chromium.org>
Commit-Queue: Hung-Te Lin <hungte@chromium.org>
Tested-by: Hung-Te Lin <hungte@chromium.org>
Trybot-Ready: Hung-Te Lin <hungte@chromium.org>

--- a/overlay-reef/make.conf
+++ b/overlay-reef/make.conf
@@ -3,7 +3,13 @@
 # found in the LICENSE file.
 
 
-USE="${USE} reef cros_ec mocktpm touchview"
+USE="${USE} reef cros_ec touchview"
+
+# Enable CR50 TPM 2.0 functionality
+USE="${USE} -tpm tpm2 cr50_onboard"
+
+# TODO: Remove this once CR50 is updated with TPM functionality
+USE="${USE} mocktpm"
 
 # All firmwares to build from the EC code base
 EC_FIRMWARE="reef"
