Snappy & Pyro: Enable TPM 2.0
Enable TPM 2.0 functionality for OS utilities, and set the
cr50_onboard USE flag for the updater.

BUG=chrome-os-partner:58061,chrome-os-partner:58233
TEST=make test

Change-Id: I4ce4f782e959675385efda2fbab9da2d97b78de4
Reviewed-on: https://chromium-review.googlesource.com/414707
Reviewed-by: Hung-Te Lin <hungte@chromium.org>
Commit-Queue: Hung-Te Lin <hungte@chromium.org>
Tested-by: Hung-Te Lin <hungte@chromium.org>
Trybot-Ready: Hung-Te Lin <hungte@chromium.org>

--- a/overlay-snappy/make.conf
+++ b/overlay-snappy/make.conf
@@ -2,8 +2,10 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+USE="${USE} snappy touchview"
 
-USE="${USE} snappy mocktpm touchview"
+# Enable CR50 TPM 2.0 functionality
+USE="${USE} -tpm tpm2 cr50_onboard"
 
 # All firmwares to build from the EC code base
 EC_FIRMWARE="snappy"
