--- a/overlay-pyro/make.conf
+++ b/overlay-pyro/make.conf
@@ -3,7 +3,10 @@
 # found in the LICENSE file.
 
 
-USE="${USE} pyro mocktpm touchview"
+USE="${USE} pyro touchview"
+
+# Enable CR50 TPM 2.0 functionality
+USE="${USE} -tpm tpm2 cr50_onboard"
 
 # All firmwares to build from the EC code base
 EC_FIRMWARE="pyro"
