--- a/baseboard-gru/make.conf
+++ b/baseboard-gru/make.conf
@@ -7,6 +7,9 @@ USE="${USE} opengles touchview vboot2 watchdog"
 USE="${USE} wifi_force_powersave"
 USE="${USE} gpu_sandbox_start_early"
 
+# Does not apply to all boards, but is a noop where it is not needed.
+USE="${USE} h1_over_spi"
+
 # Google USBPD peripheral firmwares
 LINUX_FIRMWARE="${LINUX_FIRMWARE} cros-pd"
 
