Make arc++ by default on Fievel
BUG=None
TEST=None

Change-Id: I09eaeeb5d51f56ea9b304429e254919705c8a4c7
Reviewed-on: https://chromium-review.googlesource.com/458958
Reviewed-by: Philip Chen <philipchen@chromium.org>
Reviewed-by: Ketaki Deshpande <ketakid@chromium.org>
Commit-Queue: Ketaki Deshpande <ketakid@chromium.org>
Tested-by: Ketaki Deshpande <ketakid@chromium.org>

--- a/overlay-variant-veyron-fievel/make.conf
+++ b/overlay-variant-veyron-fievel/make.conf
@@ -4,3 +4,6 @@
 
 # Placeholder for temporary device-specific overrides of settings in
 # make.defaults
+
+# Enable ARC by default.
+USE="${USE} arc"
