Nospike: Add initial model description/config
Add initial model.yaml and config files:
1. audio: ucm configuration is from sof-glkrt5682max.1mic of apel. If
channel map of the single mic is different then it needs to be changed.
2. audio: cras configuration is copied from other project so would need
to be fine tuned.
3. thermal: dptf.dv is inherited from apel and need to be updated.

CQ-DEPEND=CL:*797248
BUG=b:122936805
TEST=1. sudo emerge chromeos-config-host
        emerge-octopus chromeos-config-bsp-octopus chromeos-config-bsp-octopus-private
        emerge-octopus chromeos-config chromeos-bsp-octopus chromeos-bsp-octopus-private
        emerge-octopus chromeos-firmware-octopus
        Make sure all of these succeed
     2. cros deploy $DUT_IP chromeos-config
     3. verify /usr/share/chromeos-config/config.json.

Change-Id: I3881d427504e67ff6a5c89776d31ae7062c63e96
Reviewed-on: https://chromium-review.googlesource.com/1417316
Commit-Ready: Michael Cheng <michael_cheng@asus.corp-partner.google.com>
Tested-by: Michael Cheng <michael_cheng@asus.corp-partner.google.com>
Reviewed-by: Marco Chen <marcochen@chromium.org>
(cherry picked from commit edca1646c1b821e025227f77e5803bb477e85601)

--- a/overlay-octopus/chromeos-base/chromeos-config-bsp-octopus/files/model.yaml
+++ b/overlay-octopus/chromeos-base/chromeos-config-bsp-octopus/files/model.yaml
@@ -279,3 +279,15 @@ chromeos:
       skus:
         - $sku-id-val: 255
           config: *device_config
+    - $device-name: "nospike"
+      $fw-name: "Ampton"
+      # TODO(OEM): need update later
+      $num-mic-locations: 1
+      $card: "sof-glkrt5682max"
+      $ucm_src_root: "nospike"
+      $ucm_extra_suffix: "nospike"
+      skus:
+        - $sku-id-val: 33
+          config: *device_config
+        - $sku-id-val: 34
+          config: *device_config
