octopus: ucm_config: update UCM config
sof:
ampton: add sof ucm and config 2 cameras with 4 channels
bip: add sof ucm and config 2 cameras with 2 channels(pick up from Yong.Zhi)

common:
remove 'Headphone Playback Volume' refering to codec 5682 upstream.
replace it with 'DAC1' playback volume for headphone volume curve.

BUG=b:122380065
TEST=emerge-octopus chromeos-config-bsp-octopus chromeos-config chromeos-bsp-octopus

Change-Id: Id2896cee2b992b2cfeba14eb103e5b36f41297e4
Signed-off-by: Mac Chiang <mac.chiang@intel.com>
Signed-off-by: Yong Zhi <yong.zhi@intel.com>
Reviewed-on: https://chromium-review.googlesource.com/1397169
Commit-Ready: ChromeOS CL Exonerator Bot <chromiumos-cl-exonerator@appspot.gserviceaccount.com>
Tested-by: Li-jen Chen <lijen@google.com>
Tested-by: Hou-hsun Lee <hou-hsun.lee@intel.corp-partner.google.com>
Reviewed-by: Hsinyu Chao <hychao@chromium.org>
(cherry picked from commit 3a7e0eb6e103afe3acd374fdb4c8f644bb50bc33)

--- a/overlay-octopus/chromeos-base/chromeos-config-bsp-octopus/files/model.yaml
+++ b/overlay-octopus/chromeos-base/chromeos-config-bsp-octopus/files/model.yaml
@@ -73,7 +73,7 @@ chromeos:
       $num-mic-locations: 2
       skus:
         - $sku-id-val: 255
-          $card: "glkrt5682max"
+          $card: "sof-glkrt5682max"
           $ucm_src_root: "{{$device-name}}"
           $ucm_extra_suffix: "{{$device-name}}"
           config: *device_config
@@ -246,7 +246,7 @@ chromeos:
       $fw-name: "Ampton"
       # TODO(OEM): need update later
       $num-mic-locations: 2
-      $card: "glkrt5682max"
+      $card: "sof-glkrt5682max"
       $ucm_src_root: "ampton"
       $ucm_extra_suffix: "ampton"
       skus:
