laser: extend cras_config to support level of SKU-ID.
BUG=b:123438979
TEST=rebuild packages and image,install image to DUT,check
     /etc/cras/phaser360.laser exist,
     'ps -aux | grep /usr/bin/cras' to show:
      --/usr/bin/cras --dsp_config=/etc/cras/phaser360.laser/dsp.ini
      --device_config_dir=/etc/cras/phaser360.laser --internal_ucm_suffix=1mic

Change-Id: I7eede90c286e1bbd797d3c929135ee170918e9f2
Reviewed-on: https://chromium-review.googlesource.com/1530172
Commit-Ready: Xingyu Wu <wuxy@bitland.corp-partner.google.com>
Tested-by: Xingyu Wu <wuxy@bitland.corp-partner.google.com>
Reviewed-by: Marco Chen <marcochen@chromium.org>
(cherry picked from commit 251e9bb1e1d4f0b60a7a189b52570378e1246390)

--- a/overlay-octopus/chromeos-base/chromeos-config-bsp-octopus/files/model.yaml
+++ b/overlay-octopus/chromeos-base/chromeos-config-bsp-octopus/files/model.yaml
@@ -38,14 +38,16 @@ device-config: &device_config
       $ucm_extra_suffix: ""
       $ucm_root: "/usr/share/alsa/ucm"
       $card: "sof-glkda7219max"
-      cras-config-dir: "{{$device-name}}"
+      $sub_cras_config: ""
+      $cras-source-config-dir: "cras-config{{$sub_cras_config}}"
+      cras-config-dir: "{{$device-name}}{{$sub_cras_config}}"
       ucm-suffix: "{{$num-mic-locations}}mic{{$ucm_extra_suffix}}"
       files:
         # Volume Curve
-        - source: "{{$device-name}}/audio/cras-config/card_settings"
+        - source: "{{$device-name}}/audio/{{$cras-source-config-dir}}/card_settings"
           destination: "{{$cras_root}}/{{cras-config-dir}}/{{$card}}"
         # EQ/DRC DSP configuration
-        - source: "{{$device-name}}/audio/cras-config/dsp.ini"
+        - source: "{{$device-name}}/audio/{{$cras-source-config-dir}}/dsp.ini"
           destination: "{{$cras_root}}/{{cras-config-dir}}/dsp.ini"
         # ALSA UCM configuration file
         - source: "{{$ucm_src_root}}/audio/ucm-config/{{$card}}.{{$num-mic-locations}}mic/{{$card}}.conf"
@@ -149,6 +151,7 @@ chromeos:
           config: *convertible_config
         - $sku-id-val: 5
           $num-mic-locations: 1
+          $sub_cras_config: ".laser"
           config: *convertible_config
     - $device-name: "laser14"
       $fw-name: "Phaser"
