--- a/overlay-octopus/chromeos-base/chromeos-config-bsp-octopus/files/model.yaml
+++ b/overlay-octopus/chromeos-base/chromeos-config-bsp-octopus/files/model.yaml
@@ -283,10 +283,15 @@ chromeos:
           config: *unprovisioned_config
     - $device-name: "casta"
       $fw-name: "Casta"
-      # TODO(OEM): need update later
       $num-mic-locations: 1
       skus:
         - $sku-id-val: 1
+          config: *device_config
+    - $device-name: "bluebird"
+      $fw-name: "Casta"
+      $num-mic-locations: 1
+      skus:
+        - $sku-id-val: 2
           config: *device_config
     - $device-name: "nospike"
       $fw-name: "Ampton"
