Add autotest-capability labels "builtin_*camera" and "vivid_camera"
Add "builtin_*camera" and "vivid_camera" labels in autotest-capability
YAML files, which are introduced by CL:1530254.

This CL contains the following changes:
(1) For all boards:
    If "builtin_camera" was enabled in the YAML:
      * Add "- builtin_usb_camera" if "- usb_camera" exists.
        Otherwise, "- no builtin_usb_camera".
      * Add "- builtin_mipi_camera" if "- mipi_camera" exists.
        Otherwise, "- no builtin_mipi_camera".
      * Add "- no vivid_camera", "- builtin_camera" and "- builtin_or_vivid_camera"
    else if "builtin_camera" was disabled in the YAML:
      * Add 5 labels with "no"
(2) Enable "vivid_camera" and disable all builtin camera labels in amd64-generic.
(3) Add autotest-capability files for veyron_fievel, which is a Chromebox
    but DUTs on the lab has external USB cameras.
    There, we disabled all camera labels.

For the step (1), I used:
https://user.git.corp.google.com/keiichiw/scripts/+/b5b0079db581a3c69a8769bcc83255f52619415d/camera_autocap.py

BUG=b:129116218
TEST=build_package for veyron_fievel and check YAML
CQ-DEPEND=CL:1530254

Change-Id: I241415924f6d56ef645de5624b209643b9833a29
Signed-off-by: Keiichi Watanabe <keiichiw@chromium.org>

--- a/chipset-bdw/chromeos-base/autotest-capability-chipset-bdw/files/15-chipset-bdw-capabilities.yaml
+++ b/chipset-bdw/chromeos-base/autotest-capability-chipset-bdw/files/15-chipset-bdw-capabilities.yaml
@@ -13,6 +13,8 @@
 
 
 # camera
+- builtin_usb_camera
+- no builtin_mipi_camera
+- no vivid_camera
 - builtin_camera
-- usb_camera
-- no mipi_camera
+- builtin_or_vivid_camera
