--- a/chipset-hsw/chromeos-base/autotest-capability-chipset-hsw/files/15-chipset-hsw-capabilities.yaml
+++ b/chipset-hsw/chromeos-base/autotest-capability-chipset-hsw/files/15-chipset-hsw-capabilities.yaml
@@ -11,6 +11,8 @@
 - hw_enc_h264_2160_30
 
 # camera
+- builtin_usb_camera
+- no builtin_mipi_camera
+- no vivid_camera
 - builtin_camera
-- usb_camera
-- no mipi_camera
+- builtin_or_vivid_camera
