fizz: Fix HDMI playback rate at 48000
Fix HDMI device rate at 48000 because 44.1k has noise that is dependent
to audio samples.

BUG=chromium:917044, b:73663749
TEST=cras_test_client --playback_f /dev/zero --rate 44100 will open
     HDMI device with 48000 rate

Change-Id: I322ec992d887257caa6f2ea3ccf16c42e9bd4103
Previous-Reviewed-on: https://chromium-review.googlesource.com/1535543
(cherry picked from commit 757675710ae848f29b8227d9b6fddf02a091cf91)

--- a/overlay-fizz/chromeos-base/chromeos-bsp-fizz/files/audio-config/ucm-config/kblrt5663/HiFi.conf
+++ b/overlay-fizz/chromeos-base/chromeos-bsp-fizz/files/audio-config/ucm-config/kblrt5663/HiFi.conf
@@ -61,6 +61,7 @@ SectionDevice."HDMI1".0 {
 		PlaybackPCM "hw:kblrt5663,2"
 		JackName "kblrt5663 HDMI/DP, pcm=2 Jack"
 		JackType "gpio"
+		PlaybackRate "48000"
 	}
 	EnableSequence [
 	]
@@ -73,6 +74,7 @@ SectionDevice."HDMI2".0 {
 		PlaybackPCM "hw:kblrt5663,3"
 		JackName "kblrt5663 HDMI/DP, pcm=3 Jack"
 		JackType "gpio"
+		PlaybackRate "48000"
 	}
 	EnableSequence [
 	]
