nocturne: audio-config - M74 tuning release
BUG=b:129629136
TEST=emerge-nocturne chromeos-bsp-nocturne
verify basic audio functions

Change-Id: If80a9dc8f8058747786cd19e0041c72fc00b0634
Reviewed-on: https://chromium-review.googlesource.com/1547496
Commit-Ready: Leonardo Kusumo <leonardokusumo@chromium.org>
Tested-by: Cheng-Yi Chiang <cychiang@chromium.org>
Reviewed-by: Cheng-Yi Chiang <cychiang@chromium.org>
(cherry picked from commit c171edf481a684762b08160a094f32be45eef592)

--- a/overlay-nocturne/chromeos-base/chromeos-bsp-nocturne/files/audio-config/cras-config/dmic10/aec.ini
+++ b/overlay-nocturne/chromeos-base/chromeos-bsp-nocturne/files/audio-config/cras-config/dmic10/aec.ini
@@ -1,40 +1,57 @@
+[buffering]
+use_new_render_buffering=1
+excess_render_detection_interval_blocks=250
+max_allowed_excess_render_blocks=8
+
 [delay]
-hysteresis_limit_1_blocks=1
-hysteresis_limit_2_blocks=1
+hysteresis_limit_1_blocks=0
+hysteresis_limit_2_blocks=0
 delay_headroom_blocks=1
-fixed_capture_delay_samples=400
-default_delay=12
+fixed_capture_delay_samples=800
+default_delay=26
 min_echo_path_delay_blocks=0
-api_call_jitter_blocks=10
-num_filters=1
+api_call_jitter_blocks=20
+num_filters=3
+skew_hysteresis_blocks=12
+delay_candidate_detection_threshold=0.6
+delay_estimate_smoothing=0.7
+delay_selection_thresholds_initial=5
+delay_selection_thresholds_converged=10
+down_sampling_factor=4
+skew_hysteresis_blocks=12
 
 [ep_strength]
 bounded_erl=1
-default_len=-0.88
+default_len=-0.92
 echo_can_saturate=0
+lf=1
+mf=1
+hf=1
+reverb_based_on_render=1
 
 [erle]
-max_l=100.0
-max_h=100.0
+max_l=1000.0
+max_h=1000.0
 min=1.0
-num_sections=1
+num_sections=5
+onset_detection=0
 
 [filter.shadow]
 length_blocks=30
-rate=0.6
+rate=0.7
 noise_gate=20075344.0
 
 [filter.shadow_initial]
 length_blocks=20
-rate=0.9
+rate=0.6
 noise_gate=20075344.0
 
 [filter.main]
-length_blocks=40
-leakage_converged=0.001
-leakage_diverged=0.0001
-error_floor=0.01
-error_ceil=100
+length_blocks=30
+leakage_converged=0.00001
+leakage_diverged=0.05
+error_floor=0.001
+error_ceil=2
 noise_gate=20075344.0
 
 [render_levels]
@@ -43,51 +60,55 @@ poor_excitation_render_limit=50
 
 [filter.main_initial]
 length_blocks=20
-leakage_converged=0.005
-leakage_diverged=2.0
-error_floor=1.0
-error_ceil=100
+leakage_converged=0.0001
+leakage_diverged=0.1
+error_floor=0.1
+error_ceil=2
 noise_gate=20075344.0
 
 [filter]
 enable_shadow_filter_output_usage=1
-config_change_duration_blocks=750
-initial_state_seconds=3.0
+config_change_duration_blocks=250
+initial_state_seconds=5.0
+conservative_initial_phase=0
 
 [echo_removal_control]
 initial_gain=1.0
 first_non_zero_gain=1.0
 linear_and_stable_echo_path=1
+full_gain_blocks=110
+non_zero_gain_blocks=40
 
 [echo_audibility]
-use_stationary_properties=1
+use_stationary_properties=0
+use_stationarity_properties_at_init=0
 
 [suppressor.normal_tuning]
 mask_lf_enr_transparent=0.02
 mask_lf_enr_suppress=0.03
-mask_lf_emr_transparent=0.001
-mask_hf_enr_transparent=0.02
-mask_hf_enr_suppress=0.03
-mask_hf_emr_transparent=0.001
-max_inc_factor=1.2
-max_dec_factor_lf=0.2
+mask_lf_emr_transparent=0.03
+mask_hf_enr_transparent=0.1
+mask_hf_enr_suppress=0.21
+mask_hf_emr_transparent=0.01
+max_inc_factor=1.5
+max_dec_factor_lf=0.3
 
 [suppressor.nearend_tuning]
-mask_lf_enr_transparent=1.1
-mask_lf_enr_suppress=1.2
-mask_lf_emr_transparent=0.3
-mask_hf_enr_transparent=0.7
-mask_hf_enr_suppress=0.8
-mask_hf_emr_transparent=0.3
-max_inc_factor=2.0
-max_dec_factor_lf=0.4
+mask_lf_enr_transparent=0.05
+mask_lf_enr_suppress=0.06
+mask_lf_emr_transparent=1
+mask_hf_enr_transparent=1
+mask_hf_enr_suppress=1.1
+mask_hf_emr_transparent=0.5
+max_inc_factor=8
+max_dec_factor_lf=0.7
 
 [suppressor.dominant_nearend_detection]
-enr_threshold=0.1
-snr_threshold=5.0
-hold_duration=30
-trigger_threshold=8
-enr_exit_threshold=100
+enr_threshold=0.2
+snr_threshold=10
+hold_duration=50
+trigger_threshold=12
+enr_exit_threshold=5
 
 [suppressor.high_bands_suppression]
 enr_threshold=1.0
