--- a/overlay-sarien/chromeos-base/chromeos-config-bsp-sarien/files/model.yaml
+++ b/overlay-sarien/chromeos-base/chromeos-config-bsp-sarien/files/model.yaml
@@ -53,8 +53,12 @@ chromeos:
       skus:
         - $sku-id: 1
           config: *common_config
+        - $sku-id: 3
+          config: *common_config
     - $device-name: "arcada"
       $fw-name: "Arcada"
       skus:
         - $sku-id: 2
+          config: *common_config
+        - $sku-id: 4
           config: *common_config
